--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,21 @@
+[tool.poetry]
+name = "aristotle-whatsapp"
+version = "0.1.0"
+description = "An AI-powered WhatsApp bot that embodies Aristotle's wisdom using GPT"
+authors = ["Your Name <your.email@example.com>"]
+license = "MIT"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+flask = "^2.0.0"
+openai = "^1.0.0"
+twilio = "^8.0.0"
+requests = "^2.31.0"
+python-dotenv = "^1.0.0"
+gunicorn = "^21.0.0"
+aiohttp = "^3.8.0"
+
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
-[project]
-name = "aristotle"
-authors = [{name = "VS"}]
-license = {file = "LICENSE"}
-classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["version", "description"]
-
-[project.urls]
-Home = "https://vishsubramanian.me/?p=1058"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
